--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@nuxtjs/i18n": "^7.3.0",
+    "axios": "^1.1.3",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
+    "vue-chartjs": "^4.1.2",
     "vue-notification": "^1.3.20",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
