--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/i18n": "^7.3.0",
     "axios": "^1.1.3",
+    "core-js": "^3.26.1",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-chartjs": "^4.1.2",
